set up css for game icons and result div

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,27 +12,27 @@
 </head>
 
 <body>
-    <h1 id="head-name">Rock Paper Scissors Lizard Spock</h1>
-    <br>
-    <br>
-    <div id="icon-container">
+    <div id="game-container">
 
-        <span class="icons" id="rock"><i class="fa-regular fa-hand-back-fist fa-beat fa-2xl"
-                style="color: #002461;"></i></span>
-        <span class="icons" id="paper"><i class="fa-regular fa-hand fa-beat fa-2xl" style="color: #b30000;"></i></span>
-        <span class="icons" id="scissors"><i class="fa-regular fa-hand-scissors fa-beat fa-2xl"
+        <h1>Rock Paper Scissors Lizard Spock</h1>
+        <br>
+        <br>
+        <span class="icons" id="rock"><i class="fa-regular fa-hand-back-fist fa-2xl" style="color: #002461;"></i></span>
+        <span class="icons" id="paper"><i class="fa-regular fa-hand fa-2xl" style="color: #b30000;"></i></span>
+        <span class="icons" id="scissors"><i class="fa-regular fa-hand-scissors fa-2xl"
                 style="color: #039e00;"></i></span>
-        <span class="icons" id="lizard"><i class="fa-regular fa-hand-lizard fa-beat fa-2xl"
-                style="color: #00dbc2;"></i></span>
-        <span class="icons" id="spock"><i class="fa-regular fa-hand-spock fa-beat fa-2xl"
-                style="color: #bd2eff;"></i></span>
-
+        <span class="icons" id="lizard"><i class="fa-regular fa-hand-lizard fa-2xl" style="color: #00dbc2;"></i></span>
+        <span class="icons" id="spock"><i class="fa-regular fa-hand-spock fa-2xl" style="color: #bd2eff;"></i></span>
+        <br>
+        <br>
+        <div id="user-selection">User icon</div>
+        <br>
+        <p>VS</p>
+        <br>
+        <div id="cpu-selection">CPU Icon</div>
     </div>
-    <br>
-    <br>
-    <div>Game outcome</div>
 
-    <div>Game Score</div>
+
 
 
 </body>
