--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
         <h1>Rock Paper Scissors Lizard Spock</h1>
         <br>
         <br>
-        <span class="icons" id="rock"><i class="fa-regular fa-hand-back-fist fa-2xl" style="color: #002461;"></i></span>
-        <span class="icons" id="paper"><i class="fa-regular fa-hand fa-2xl" style="color: #b30000;"></i></span>
-        <span class="icons" id="scissors"><i class="fa-regular fa-hand-scissors fa-2xl"
-                style="color: #039e00;"></i></span>
-        <span class="icons" id="lizard"><i class="fa-regular fa-hand-lizard fa-2xl" style="color: #00dbc2;"></i></span>
-        <span class="icons" id="spock"><i class="fa-regular fa-hand-spock fa-2xl" style="color: #bd2eff;"></i></span>
-        <br>
-        <br>
-        <div id="user-selection">User icon</div>
-        <br>
-        <p>VS</p>
-        <br>
-        <div id="cpu-selection">CPU Icon</div>
+        <button class="icons" id = "rock"><i class="fa-regular fa-hand-back-fist fa-2xl"
+                style="color: #000000;"></i></button>
+        <button class="icons" id="paper"><i class="fa-regular fa-hand fa-2xl" style="color: #000000;"></i></button>
+        <button class="icons" id="scissors"><i class="fa-regular fa-hand-scissors fa-2xl"
+                style="color: #000000;"></i></button>
+        <button class="icons" id="lizard"><i class="fa-regular fa-hand-lizard fa-2xl"
+                style="color: #000000;"></i></button>
+        <button class="icons" id="spock"><i class="fa-regular fa-hand-spock fa-2xl"
+                style="color: #000000;"></i></button>
+    </div>
+
+    <div id="result-display">
+        <button class="icons" id="user-selection">User icon</button>
+        <p>VERSUS</p><button class="icons" id="cpu-selection">CPU Icon</button>
     </div>
 
 
