add images to buttons and embed video

--- a/index.html
+++ b/index.html
@@ -6,26 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c5692d6d7a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>RPSLP</title>
 </head>
 
 <body>
+    <h1>Rock Paper Scissors Lizard Spock</h1>
     <div id="game-container">
-
-        <h1>Rock Paper Scissors Lizard Spock</h1>
-        <br>
-        <br>
-        <button class="icons" id = "rock"><i class="fa-regular fa-hand-back-fist fa-2xl"
-                style="color: #000000;"></i></button>
-        <button class="icons" id="paper"><i class="fa-regular fa-hand fa-2xl" style="color: #000000;"></i></button>
-        <button class="icons" id="scissors"><i class="fa-regular fa-hand-scissors fa-2xl"
-                style="color: #000000;"></i></button>
-        <button class="icons" id="lizard"><i class="fa-regular fa-hand-lizard fa-2xl"
-                style="color: #000000;"></i></button>
-        <button class="icons" id="spock"><i class="fa-regular fa-hand-spock fa-2xl"
-                style="color: #000000;"></i></button>
+        <button class="icons" id="rock" type="submit"></button>
+        <button class="icons" id="paper" type="submit"></button>
+        <button class="icons" id="scissors" type="submit"></button>
+        <button class="icons" id="lizard" type="submit"></button>
+        <button class="icons" id="spock" type="submit"></button>
     </div>
 
     <div id="result-display">
@@ -34,8 +26,14 @@
     </div>
 
 
-
-
+    <div class="video">
+        <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen autoplay=0></iframe>
+        </div>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
