add function to display user input into seperate button

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
         <button class="icons" id="spock" type="submit"></button>
     </div>
 
-    <div id="result-display">
-        <button class="icons" id="user-selection">User icon</button>
-        <p>VERSUS</p><button class="icons" id="cpu-selection">CPU Icon</button>
-    </div>
+    <button id="result-display">
+    </button>
+
+    <h1 id="versus">VERSUS</h1>
+
+    <button class="icons" id="cpu-display">
+
+    </button>
 
 
     <div class="video">
         <iframe width="560" height="315"
-        src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen autoplay=0></iframe>
-        </div>
+            src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen autoplay=0></iframe>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
