add function for cpu display box

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h1 id="versus">VERSUS</h1>
 
-    <button class="icons" id="cpu-display">
+    <button id="cpu-display">
 
     </button>
 
