add alert box from sweetalert

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </button>
 
 
+
     <div class="video">
         <iframe width="560" height="315"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
@@ -37,6 +38,7 @@
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen autoplay=0></iframe>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
