add media queries for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
 </head>
 
 <body>
+
     <h1>Rock Paper Scissors Lizard Spock</h1>
-    <div id="game-container">
-        <button class="icons" id="rock" type="submit"></button>
+    <Span><button class="icons" id="rock" type="submit"></button>
         <button class="icons" id="paper" type="submit"></button>
         <button class="icons" id="scissors" type="submit"></button>
         <button class="icons" id="lizard" type="submit"></button>
         <button class="icons" id="spock" type="submit"></button>
+    </Span>
+
+    <div id="game-container">
+        <button id="result-display">
+        </button>
+
+        <h1 id="versus">VERSUS</h1>
+
+        <button id="cpu-display">
+
+        </button>
     </div>
-
-    <button id="result-display">
-    </button>
-
-    <h1 id="versus">VERSUS</h1>
-
-    <button id="cpu-display">
-
-    </button>
 
 
 
