change tile div and game div to match styles

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 <body>
 
     <h1>Rock Paper Scissors Lizard Spock</h1>
-    <Span><button class="icons" id="rock" type="submit"></button>
+    <div class="game-container">
+        <button class="icons" id="rock" type="submit"></button>
         <button class="icons" id="paper" type="submit"></button>
         <button class="icons" id="scissors" type="submit"></button>
         <button class="icons" id="lizard" type="submit"></button>
         <button class="icons" id="spock" type="submit"></button>
-    </Span>
+    </div>
 
-    <div id="game-container">
+    <div class="game-container">
         <button id="result-display">
         </button>
 
