add second page to hold the explanation video, call it how to play.

--- a/index.html
+++ b/index.html
@@ -32,15 +32,9 @@
         </button>
     </div>
 
+    <form action="/howtoplay.html" method="get" target="_blank">
+    <button id="howToPlay" type="submit">How to Play</button>
 
-
-    <div class="video">
-        <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen autoplay=0></iframe>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
 </body>
