--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </button>
     </div>
 
-    <form action="/howtoplay.html" method="get" target="_blank">
-    <button id="howToPlay" type="submit">How to Play</button>
+    <form action="/assets/html/howtoplay.html" method="get" target="_blank">
+        <button id="howToPlay" type="submit">How to Play</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="assets/js/script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
