fix broken link to second page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </button>
     </div>
 
-    <form action="/assets/html/howtoplay.html" method="get" target="_blank">
+    <form action="../RPSLS/assets/html/howtoplay.html" method="get" target="_blank">
         <button id="howToPlay" type="submit">How to Play</button>
 
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
