fix broken CSS link in how to play page

--- a/assets/html/howtoplay.html
+++ b/assets/html/howtoplay.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>RPSLP</title>
 </head>
 
 <body>
-    <h1><a id="header" href="index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1><a id="header" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div class="video">
         <iframe width="560" height="315"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
@@ -19,7 +19,7 @@
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen autoplay=0></iframe>
     </div>
-    <h1><a id="returnGamePage" href="/index.html">Back to the Game</a></h1>
+    <h1><a id="returnGamePage" href="../../index.html">Back to the Game</a></h1>
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
