change layout of user vs cpu to side by side

--- a/index.html
+++ b/index.html
@@ -20,19 +20,15 @@
         <button class="icons" id="lizard" type="submit"></button>
         <button class="icons" id="spock" type="submit"></button>
     </div>
-
+    <h1 id="centerText">Player 1 ...VS... CPU</h1>
     <div class="game-container">
         <button id="result-display">
         </button>
-
-        <h1 id="versus">VERSUS</h1>
-
         <button id="cpu-display">
-
         </button>
     </div>
 
-    <form action="../RPSLS/assets/html/howtoplay.html" method="get" target="_blank">
+    <form action="/assets/html/howtoplay.html" method="get" target="_blank">
         <button id="howToPlay" type="submit">How to Play</button>
 
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
