change styles on result container to center properly

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1>Rock Paper Scissors Lizard Spock</h1>
-    <div class="game-container">
+    <div id="game-container">
         <button class="icons" id="rock" type="submit"></button>
         <button class="icons" id="paper" type="submit"></button>
         <button class="icons" id="scissors" type="submit"></button>
@@ -21,7 +21,7 @@
         <button class="icons" id="spock" type="submit"></button>
     </div>
     <h1 id="centerText">Player 1 ...VS... CPU</h1>
-    <div class="game-container">
+    <div id="result-container">
         <button id="result-display">
         </button>
         <button id="cpu-display">
