--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 <body>
 
     <h1>Rock Paper Scissors Lizard Spock</h1>
-    <div id="game-container">
-        <button class="icons" id="rock" type="submit"></button>
-        <button class="icons" id="paper" type="submit"></button>
-        <button class="icons" id="scissors" type="submit"></button>
-        <button class="icons" id="lizard" type="submit"></button>
-        <button class="icons" id="spock" type="submit"></button>
-    </div>
+
     <h1 id="centerText">Player 1 ...VS... CPU</h1>
     <div id="result-container">
         <button id="result-display">
@@ -27,7 +21,14 @@
         <button id="cpu-display">
         </button>
     </div>
-
+    <h1>Choose Your Weapon</h1>
+    <div id="game-container">
+        <button class="icons" id="rock" type="submit"></button>
+        <button class="icons" id="paper" type="submit"></button>
+        <button class="icons" id="scissors" type="submit"></button>
+        <button class="icons" id="lizard" type="submit"></button>
+        <button class="icons" id="spock" type="submit"></button>
+    </div>
     <form action="../RPSLS/assets/html/howtoplay.html" method="get" target="_blank">
         <button id="howToPlay" type="submit">How to Play</button>
 
