change padding on video and text size to center on screen better

--- a/assets/html/howtoplay.html
+++ b/assets/html/howtoplay.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <h1><a id="header" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerHowToPlay"><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div class="video">
-        <iframe width="300" height="150"
+        <iframe width="500" height="250"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen autoplay=0></iframe>
     </div>
-    <h1><a id="returnGamePage" href="../../index.html">Back to the Game</a></h1>
+    <h1 class="headerHowToPlay"><a id="returnGamePage" href="../../index.html">Back to the Game</a></h1>
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
