--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <h1>Rock Paper Scissors Lizard Spock</h1>
+    <h1 class="headerLogo">Rock Paper Scissors Lizard Spock</h1>
 
     <h1 id="centerText">Player 1 ...VS... CPU</h1>
     <div id="result-container">
@@ -21,7 +21,7 @@
         <button id="cpu-display">
         </button>
     </div>
-    <h1>Choose Your Weapon</h1>
+    <h1 id="chooseWeapon">Choose Your Weapon</h1>
     <div id="game-container">
         <button class="icons" id="rock" type="submit"></button>
         <button class="icons" id="paper" type="submit"></button>
@@ -29,7 +29,7 @@
         <button class="icons" id="lizard" type="submit"></button>
         <button class="icons" id="spock" type="submit"></button>
     </div>
-    <form action="../RPSLS/assets/html/howtoplay.html" method="get" target="_blank">
+    <form action="/assets/html/howtoplay.html" method="get" target="_blank">
         <button id="howToPlay" type="submit">How to Play</button>
 
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
