--- a/assets/html/howtoplay.html
+++ b/assets/html/howtoplay.html
@@ -19,7 +19,7 @@
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen autoplay=0></iframe>
     </div>
-    <h1 class="headerHowToPlay"><a id="returnGamePage" href="../../index.html">Back to the Game</a></h1>
+    <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
