--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -11,9 +11,14 @@
 
 <body>
 
-    <h1><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerPadding"><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
 
-    <h1 id="centerText">Player 1 ...VS... CPU</h1>
+    <div id="centerText">
+        <span>Player Score</span>
+        <span id="playerScore">0</span>
+        <span>Cpu Score</span>
+        <span id="cpuScore">0</span>
+    </div>
 
     <!--container for the results to appear-->
 
@@ -34,12 +39,12 @@
             <span style="--i:4">O</span>
             <span style="--i:5">S</span>
             <span style="--i:6">E</span>
-            <span style="--i:7"></span>
+            <br>
             <span style="--i:8">Y</span>
             <span style="--i:9">O</span>
             <span style="--i:10">U</span>
             <span style="--i:11">R</span>
-            <span style="--i:12"></span>
+            <br>
             <span style="--i:13">W</span>
             <span style="--i:14">E</span>
             <span style="--i:15">A</span>
