--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 
-    <h1 class="headerLogo">Rock Paper Scissors Lizard Spock</h1>
+    <h1 class="headerPadding">Rock Paper Scissors Lizard Spock</h1>
 
 
-    <button onclick="window.location.href='/assets/html/game.html'" id="howToPlay" type="submit">
+    <button onclick="window.location.href='../RPSLS/assets/html/game.html'" class="homeIcons" type="submit">
         Play Game</button>
 
-    <button onclick="window.location.href='/assets/html/howtoplay.html'" id="howToPlay" type="submit">
+    <button onclick="window.location.href='../RPSLP/assets/html/howtoplay.html'" class="homeIcons" type="submit">
         How to Play</button>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
