fix broken link to howtoplay page, link working in test but not when published

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button onclick="window.location.href='../RPSLS/assets/html/game.html'" class="homeIcons" type="submit">
         Play Game</button>
 
-    <button onclick="window.location.href='/assets/html/howtoplay.html'" class="homeIcons" type="submit">
+    <button onclick="window.location.href='../RPSLS/assets/html/howtoplay.html'" class="homeIcons" type="submit">
         How to Play</button>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
