update readme with photos and text

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -57,11 +57,11 @@
     <!--container for the game buttons to be selecteed by the player-->
 
     <div id="game-container">
-        <button class="icons" id="rock" type="submit"></button>
-        <button class="icons" id="paper" type="submit"></button>
-        <button class="icons" id="scissors" type="submit"></button>
-        <button class="icons" id="lizard" type="submit"></button>
-        <button class="icons" id="spock" type="submit"></button>
+        <button aria-label="Rock" class="icons" id="rock" type="submit"></button>
+        <button aria-label="Paper" class="icons" id="paper" type="submit"></button>
+        <button aria-label="Scissors" class="icons" id="scissors" type="submit"></button>
+        <button aria-label="Lizard" class="icons" id="lizard" type="submit"></button>
+        <button aria-label="Spock" class="icons" id="spock" type="submit"></button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
