--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <h1 class="headerPadding">Rock Paper Scissors Lizard Spock</h1>
 
+    <!--buttons for user to either play game or see instructions-->
 
     <button onclick="window.location.href='../RPSLS/assets/html/game.html'" class="homeIcons" type="submit">
         Play Game</button>
