--- a/assets/html/howToPlayText.html
+++ b/assets/html/howToPlayText.html
@@ -12,19 +12,14 @@
 
 <body>
     <h1 class="headerHowToPlay"><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
-    <div class="video">
-        <iframe width="500" height="250"
-            src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen autoplay=0></iframe>
+    <div id="textInstructions">
+        <p>Rock Crushes Scissors, and Smashes Lizard</p>
+        <p>Paper Covers Rock and Disproves Spock</p>
+        <p>Scissors Decapitates Lizard and Cuts Paper</p>
+        <p>Lizard Eats Paper and Poisons Spock</p>
+        <p>Spock Crushes Scissors and Smashes Rock</p>
     </div>
-
-    <button onclick="window.location.href='../html/howToPlayText.html'" class="homeIcons" type="submit">
-        Text Instructions</button>
-
     <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
-
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
