--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -98,6 +98,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/checkLoseFunction.js"></script>
     <script src="../js/checkAnswer.js"></script>
     <script src="../js/script.js"></script>
 </body>
