update read me with reference to sounds added

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -64,6 +64,8 @@
         <button onclick="spockPlay()" aria-label="Spock" class="icons" id="spock" type="submit"></button>
     </div>
 
+    <!--audio for the buttons and the win/lose/draw alerts.-->
+
     <audio id="rockSound">
         <source src="../audio/photonTorpedo.wav">
     </audio>
