--- a/assets/html/howtoplay.html
+++ b/assets/html/howtoplay.html
@@ -20,8 +20,8 @@
             allowfullscreen autoplay=0></iframe>
     </div>
 
-    <button onclick="window.location.href='../html/howToPlayText.html'" class="homeIcons" type="submit">
-        Text Instructions</button>
+    <button onclick="window.location.href='../html/howToPlayText.html'" id="rulesButton" type="submit">
+        Rules</button>
 
     <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
 
