add new sound effect to win and lose

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -91,11 +91,11 @@
     </audio>
 
     <audio id="winSound">
-        <source src="../audio/Spock_Fascinating1.wav">
+        <source src="../audio/YouWin.mp3">
     </audio>
 
     <audio id="loseSound">
-        <source src="../audio/Spock_Checkmate.wav">
+        <source src="../audio/YouLose.mp3">
     </audio>
 
 
