add function to make the top score 10 and animate a pop that refreshes the page.

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -24,8 +24,13 @@
 
     <div id="result-container">
         <span id="result-display">
+            <button aria-label="player choice placeholder" class="icons" id="playerPlaceholder" type="submit">Player
+                Choice</button>
         </span>
+
         <span id="cpu-display">
+            <button aria-label="player choice placeholder" class="icons" id="playerPlaceholder" type="submit">Cpu
+                Choice</button>
         </span>
     </div>
 
