--- a/assets/html/howToPlayText.html
+++ b/assets/html/howToPlayText.html
@@ -18,6 +18,7 @@
         <p>Scissors Decapitates Lizard and Cuts Paper</p>
         <p>Lizard Eats Paper and Poisons Spock</p>
         <p>Spock Crushes Scissors and Smashes Rock</p>
+        <p>The First to Reach a Score of 10 is the Winner</p>
     </div>
     <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
 
