change style of overall winner pop up and add start again button

--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -24,38 +24,23 @@
 
     <div id="result-container">
         <span id="result-display">
-            <button aria-label="player choice placeholder" class="icons" id="playerPlaceholder" type="submit">Player
-                Choice</button>
+            <button aria-label="player choice placeholder" class="icons" id="playerPlaceholder" type="submit">
+                PLAYER
+            </button>
         </span>
 
         <span id="cpu-display">
-            <button aria-label="player choice placeholder" class="icons" id="playerPlaceholder" type="submit">Cpu
-                Choice</button>
+            <button aria-label="player choice placeholder" class="icons" id="cpuPlaceholder" type="submit">
+                CPU
+            </button>
         </span>
     </div>
 
     <!--wave code sourced from https: //alvarotrigo.com/blog/css-text-animations -->
 
     <body>
-        <div class="waviy">
-            <span style="--i:1">C</span>
-            <span style="--i:2">H</span>
-            <span style="--i:3">O</span>
-            <span style="--i:4">O</span>
-            <span style="--i:5">S</span>
-            <span style="--i:6">E</span>
-            <br>
-            <span style="--i:8">Y</span>
-            <span style="--i:9">O</span>
-            <span style="--i:10">U</span>
-            <span style="--i:11">R</span>
-            <br>
-            <span style="--i:13">W</span>
-            <span style="--i:14">E</span>
-            <span style="--i:15">A</span>
-            <span style="--i:16">P</span>
-            <span style="--i:17">O</span>
-            <span style="--i:18">N</span>
+        <div class="gameText">
+            <p>Choose Your Weapon</p>
         </div>
     </body>
 
