--- a/assets/html/game.html
+++ b/assets/html/game.html
@@ -47,11 +47,12 @@
     <!--container for the game buttons to be selecteed by the player-->
 
     <div id="game-container">
-        <button onclick="rockPlay()" aria-label="Rock" class="icons" id="rock" type="submit"></button>
-        <button onclick="paperPlay()" aria-label="Paper" class="icons" id="paper" type="submit"></button>
-        <button onclick="scissorsPlay()" aria-label="Scissors" class="icons" id="scissors" type="submit"></button>
-        <button onclick="lizardPlay()" aria-label="Lizard" class="icons" id="lizard" type="submit"></button>
-        <button onclick="spockPlay()" aria-label="Spock" class="icons" id="spock" type="submit"></button>
+        <button onclick="rockPlay()" aria-label="Selects Rock" class="icons" id="rock" type="submit"></button>
+        <button onclick="paperPlay()" aria-label="Selects Paper" class="icons" id="paper" type="submit"></button>
+        <button onclick="scissorsPlay()" aria-label="Selects Scissors" class="icons" id="scissors"
+            type="submit"></button>
+        <button onclick="lizardPlay()" aria-label="Selects Lizard" class="icons" id="lizard" type="submit"></button>
+        <button onclick="spockPlay()" aria-label="Selects Spock" class="icons" id="spock" type="submit"></button>
     </div>
 
     <div class="gameText">
