--- a/assets/html/howToPlayText.html
+++ b/assets/html/howToPlayText.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    
+<!--instructions on how to play game-->
+
     <h1 class="headerHowToPlay"><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div id="textInstructions">
         <p>Rock Crushes Scissors, and Smashes Lizard</p>
