clean up code indentation

--- a/assets/html/howtoplay.html
+++ b/assets/html/howtoplay.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,10 +20,10 @@
     </div>
 
     <button onclick="window.location.href='../html/howToPlayText.html'" id="rulesButton" type="submit">
-        Rules</button>
+        Rules
+    </button>
 
     <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
-
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
