--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 
 <body>
-
     <h1 class="headerPadding">Rock Paper Scissors Lizard Spock</h1>
 
     <!--buttons for user to either play game or see instructions-->
 
     <button onclick="window.location.href='../RPSLS/assets/html/game.html'" class="homeIcons" type="submit">
-        Play Game</button>
+        Play Game
+    </button>
 
     <button onclick="window.location.href='../RPSLS/assets/html/howtoplay.html'" class="homeIcons" type="submit">
-        How to Play</button>
+        How to Play
+    </button>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
