fix errors highlighted in w3c validator, as per feedback

--- a/assets/html/howtoplay.html
+++ b/assets/html/howtoplay.html
@@ -14,9 +14,9 @@
     <div class="video">
         <iframe width="500" height="250"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
-            title="YouTube video player" frameborder="0"
+            title="YouTube video player"
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen autoplay=0></iframe>
+            allowfullscreen></iframe>
     </div>
 
     <button onclick="window.location.href='../html/howToPlayText.html'" id="rulesButton" type="submit">
