--- a/html/how_to_play.html
+++ b/html/how_to_play.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>RPSLP</title>
 </head>
 
 <body>
-    <h1 class="headerHowToPlay"><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerHowToPlay"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div class="video">
         <iframe width="500" height="250"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
@@ -19,11 +19,11 @@
             allowfullscreen></iframe>
     </div>
 
-    <button onclick="window.location.href='../html/howToPlayText.html'" id="rulesButton" type="submit">
+    <button onclick="window.location.href='/html/how_to_play_text.html'" id="rulesButton" type="submit">
         Rules
     </button>
 
-    <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
+    <h1 class="headerHowToPlay"><a id="returnGamePage" href="/html/game.html">Back to the Game</a></h1>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
