--- a/html/how_to_play_text.html
+++ b/html/how_to_play_text.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>RPSLP</title>
 </head>
 
 <body>
     <!--instructions on how to play game-->
 
-    <h1 class="headerHowToPlay"><a class="headerLogo" href="../../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerHowToPlay"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div id="textInstructions">
         <p>Rock Crushes Scissors, and Smashes Lizard</p>
         <p>Paper Covers Rock and Disproves Spock</p>
@@ -22,7 +22,7 @@
         <p>Spock Crushes Scissors and Smashes Rock</p>
         <p>The First to Reach a Score of 5 is the Winner</p>
     </div>
-    <h1 class="headerHowToPlay"><a id="returnGamePage" href="../html/game.html">Back to the Game</a></h1>
+    <h1 class="headerHowToPlay"><a id="returnGamePage" href="/html/game.html">Back to the Game</a></h1>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
