fix link to game and how to play page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <!--buttons for user to either play game or see instructions-->
 
-    <button onclick="window.location.href='/html/game.html'" class="homeIcons" type="submit">
+    <button onclick="window.location.href='html/game.html'" class="homeIcons" type="submit">
         Play Game
     </button>
 
-    <button onclick="window.location.href='/html/how_to_play.html'" class="homeIcons" type="submit">
+    <button onclick="window.location.href='html/how_to_play.html'" class="homeIcons" type="submit">
         How to Play
     </button>
 
