--- a/html/game.html
+++ b/html/game.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1 class="headerPadding"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerPadding"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
 
     <div class="gameText">
         <span>Player Score</span>
@@ -58,49 +58,49 @@
     <!--audio for the buttons and the win/lose/draw alerts.-->
 
     <audio id="rockSound">
-        <source src="/assets/audio/photonTorpedo.wav">
+        <source src="../assets/audio/photonTorpedo.wav">
     </audio>
 
     <audio id="paperSound">
-        <source src="/assets/audio/cpuSound1.wav">
+        <source src="../assets/audio/cpuSound1.wav">
     </audio>
 
     <audio id="scissorsSound">
-        <source src="/assets/audio/cpuSound2.wav">
+        <source src="../assets/audio/cpuSound2.wav">
     </audio>
 
     <audio id="lizardSound">
-        <source src="/assets/audio/cpuSound3.wav">
+        <source src="../assets/audio/cpuSound3.wav">
     </audio>
 
     <audio id="spockSound">
-        <source src="/assets/audio/tos-computer-04.wav">
+        <source src="../assets/audio/tos-computer-04.wav">
     </audio>
 
     <audio id="drawSound">
-        <source src="/assets/audio/Irritating.wav">
+        <source src="../assets/audio/Irritating.wav">
     </audio>
 
     <audio id="winSound">
-        <source src="/assets/audio/YouWin.mp3">
+        <source src="../assets/audio/YouWin.mp3">
     </audio>
 
     <audio id="loseSound">
-        <source src="/assets/audio/YouLose.mp3">
+        <source src="../assets/audio/YouLose.mp3">
     </audio>
 
     <audio id="gameOver">
-        <source src="/assets/audio/gameOver.wav">
+        <source src="../assets/audio/gameOver.wav">
     </audio>
 
     <audio id="gameWinner">
-        <source src="/assets/audio/gameWinner.wav">
+        <source src="../assets/audio/gameWinner.wav">
     </audio>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/assets/js/checkLoseFunction.js"></script>
-    <script src="/assets/js/checkAnswer.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="../assets/js/checkLoseFunction.js"></script>
+    <script src="../assets/js/checkAnswer.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 
 </html>
