--- a/html/how_to_play.html
+++ b/html/how_to_play.html
@@ -19,11 +19,11 @@
             allowfullscreen></iframe>
     </div>
 
-    <button onclick="window.location.href='/html/how_to_play_text.html'" id="rulesButton" type="submit">
+    <button onclick="window.location.href='how_to_play_text.html'" id="rulesButton" type="submit">
         Rules
     </button>
 
-    <h1 class="headerHowToPlay"><a id="returnGamePage" href="/html/game.html">Back to the Game</a></h1>
+    <h1 class="headerHowToPlay"><a id="returnGamePage" href="game.html">Back to the Game</a></h1>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
