fix link from how to play pages header back to game

--- a/html/how_to_play.html
+++ b/html/how_to_play.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="headerHowToPlay"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerHowToPlay"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div class="video">
         <iframe width="500" height="250"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
