--- a/html/how_to_play_text.html
+++ b/html/how_to_play_text.html
@@ -13,7 +13,7 @@
 <body>
     <!--instructions on how to play game-->
 
-    <h1 class="headerHowToPlay"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
+    <h1 class="headerHowToPlay"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
     <div id="textInstructions">
         <p>Rock Crushes Scissors, and Smashes Lizard</p>
         <p>Paper Covers Rock and Disproves Spock</p>
@@ -22,7 +22,7 @@
         <p>Spock Crushes Scissors and Smashes Rock</p>
         <p>The First to Reach a Score of 5 is the Winner</p>
     </div>
-    <h1 class="headerHowToPlay"><a id="returnGamePage" href="/html/game.html">Back to the Game</a></h1>
+    <h1 class="headerHowToPlay"><a id="returnGamePage" href="game.html">Back to the Game</a></h1>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/js/script.js"></script>
